--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "categories": [
         "Programming Languages"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/awmorgan/wuffs-extension"
+    },
     "contributes": {
         "languages": [
             {
